K1J-1356: Fix tests in converter.